[gd_scene load_steps=2 format=3 uid="uid://u88ye4xgrk8h"]

[ext_resource type="Script" uid="uid://dk5iruu4bknq6" path="res://characters/narrative_overlay.gd" id="1_htcev"]

[node name="NarrativeOverlay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_htcev")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 2

[node name="ContentLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BtnContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ExampleLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
